@@ -1,6 +1,5 @@
 package ti4.commands.help;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
@@ -20,10 +19,10 @@ class Monuments extends Subcommand {
         showMonumentsHelp(event);
     }
 
-    public static void showMonumentsHelp(GenericInteractionCreateEvent event) {
+    private static void showMonumentsHelp(GenericInteractionCreateEvent event) {
         String path = ResourceHelper.getInstance().getHelpFile("Monuments.txt");
         try {
-            String message = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
+            String message = Files.readString(Paths.get(path));
             MessageHelper.sendMessageToEventChannel(event, message);
         } catch (Exception e) {
             MessageHelper.sendMessageToEventChannel(event, "MONUMENTS HELP FILE IS BLANK");
