@@ -1,13 +1,6 @@
 package ti4.image;
 
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Graphics;
-import java.awt.Graphics2D;
-import java.awt.Point;
-import java.awt.Rectangle;
-import java.awt.RenderingHints;
-import java.awt.Stroke;
+import java.awt.*;
 import java.awt.color.ColorSpace;
 import java.awt.image.BufferedImage;
 import java.awt.image.ColorConvertOp;
@@ -1605,8 +1598,9 @@ public class MapGenerator implements AutoCloseable {
                     }
                 }
                 if (offBoardHighlighting >= 2) {
-                    for (String planet : attachFiles.keySet()) {
-                        BufferedImage bufferedImage = ImageHelper.read(attachFiles.get(planet));
+                    for (Map.Entry<String, String> entry : attachFiles.entrySet()) {
+                        String planet = entry.getKey();
+                        BufferedImage bufferedImage = ImageHelper.read(entry.getValue());
                         bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f
                                 / offBoardHighlighting
                                 / bufferedImage.getWidth()
@@ -1746,8 +1740,8 @@ public class MapGenerator implements AutoCloseable {
     }
 
     private void paintPlayerInfoOld(Game game, Player player, int ringCount) {
-        int deltaX = 0, deltaSplitX = 0;
-        int deltaY = 0, deltaSplitY = 0;
+        int deltaX, deltaSplitX = 0;
+        int deltaY, deltaSplitY = 0;
 
         String playerStatsAnchor = player.getPlayerStatsAnchorPosition();
         if (playerStatsAnchor != null) {
@@ -2293,7 +2287,7 @@ public class MapGenerator implements AutoCloseable {
      * @param game
      * @return between 3 and 8 (bounds based on constants)
      */
-    public static int getRingCount(Game game) {
+    private static int getRingCount(Game game) {
         return Math.max(Math.min(game.getRingCount(), RING_MAX_COUNT), RING_MIN_COUNT);
     }
 
@@ -2341,7 +2335,7 @@ public class MapGenerator implements AutoCloseable {
         return mapWidth;
     }
 
-    protected static int getMaxObjectiveWidth(Game game) {
+    static int getMaxObjectiveWidth(Game game) {
         return (getMapWidth(game) - SPACING_BETWEEN_OBJECTIVE_TYPES * 4) / 3;
     }
 
@@ -2353,7 +2347,7 @@ public class MapGenerator implements AutoCloseable {
         return op.filter(image, null);
     }
 
-    void addWebsiteOverlay(String overlayTitle, String overlayText, int x, int y, int width, int height) {
+    private void addWebsiteOverlay(String overlayTitle, String overlayText, int x, int y, int width, int height) {
         addWebsiteOverlay(websiteOverlays, overlayTitle, overlayText, x, y, width, height);
     }
 
@@ -2403,7 +2397,7 @@ public class MapGenerator implements AutoCloseable {
                     // Apply global translation to each coordinate
                     List<Point> globalCoordinates = coordinates.stream()
                             .map(point -> new Point(point.x + tileX, point.y + tileY))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     globalUnitCoordinatesByFaction
                             .computeIfAbsent(faction, k -> new HashMap<>())
